tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesGatewayTests.AddGateway_WithGrpcRoute_GeneratesGatewayAndGrpcRoute#00.verified.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "Gateway"
metadata:
  name: "public"
spec:
  gatewayClassName: "istio"
  listeners:
    - name: "http"
      protocol: "HTTP"
      port: 80
      allowedRoutes:
        namespaces:
          from: "Same"
